<resources>
    <string name="app_name">PCHUB</string>
    <string name="PCHub1">PCHub\nFor\nDummies</string>
    <string name="Welcome">"Welcome to \n PCHub for Dummies \n Placeholder startup"</string>
    <string name="Welcome1">I dunno wtf do i put here yet\nthis a placeholder for now lmao</string>
    <string name="Purpose">(not final startup) \n Our app is about guide for pc builds, and some recommended packagees\nthat fits your budget while looking for some hot af gaming rigs that\ncan burn your pockets and leave you in debt.</string>
    <string name="TextRegister">Let\'s Get Started\nFill up the Information below.</string>
    <string name="full_name">Full Name</string>
    <string name="username">Email</string>
    <string name="Pass">Password</string>
    <string name="Pass2">Confirm Password</string>
    <string name="RegButton">Register</string>
    <string name="Choice">What do you want to do?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome_Intro">Welcome to the guiding window where we have provided you a step-by-step tutorial oh building a PC.</string>
    <string name="Welcome_Intro2">Welcome to the guiding window where we have provided you a step-by-step tutorial on choosing a PC parts.</string>
    <string name="step_1">Step 1\n(Preparation)</string>
    <string name="step_2">Step 2\n(Installing CPU)</string>
    <string name="step_3">Step 3\n(Installing RAM)</string>
    <string name="step_4">Step 4\n(Installing Motherboard)</string>
    <string name="step_5">Step 5\n(Installing Power Supply)</string>
    <string name="step_6">Step 6\n(Installing SSD)</string>
    <string name="step_7">Step 7\n(Installing GPU)</string>
    <string name="description">"    Make sure you have all the necessary hardware components for your build, including the CPU, motherboard, RAM, graphics card, storage drives, power supply, and any additional peripherals you want to install."</string>
    <string name="description2">"   Ensure that all your components are compatible with each other and fit within your chosen PC case. Verify that the CPU socket matches the motherboard, the RAM is compatible, and the power supply provides enough wattage for your components."</string>
    <string name="installcpu">"   Before you touch the CPU, ground yourself by wearing the anti-static wristband or by touching a grounded metal surface to discharge any static electricity."</string>
    <string name="installcpu2">"   Make sure the Intel CPU must go to the Intel Motherboards(B460, B560, and Z590). And it also depends what DDR your motherboard is. So does in the AMD CPU in AMD Motherboards(B450, B550, B560, and X570)"</string>
    <string name="installram">"   On your motherboard, identify the RAM slots. These are usually long, rectangular slots grouped together near the CPU socket. Gently insert the RAM module into the slot at a slight angle, then press down evenly on both ends until the retention clips click into place."</string>
    <string name="installram2">"   Also, make sure to know if your Motherboard is DDR3, DDR4 or DDR5. Because the most important part of this tutorial is the compatibility of your PC Parts."</string>
    <string name="installmobo">"   Once the motherboard is in place, use the provided screws (usually included with the case or motherboard) to secure it to the standoffs. Start by loosely screwing in each corner screw, and then gradually tighten them in a crisscross pattern to ensure even pressure. Be careful not to overtighten, as this can damage the motherboard."</string>
    <string name="installmobo2">"   Check your Motherboard's Size. And ATX case can fit all of the sizes of the Motherboards. An mATX can only fit mATX and ITX motherboards. And ITX motherboards are the smallest."</string>
    <string name="installpsu">"   Place the PSU in the designated area with the fan facing downward (if your case has a PSU shroud with ventilation) or upward, depending on your case's design and airflow requirements. The PSU fan should face the inside of the case to help expel hot air."</string>
    <string name="installpsu2">"   A PSU or Power Supply Unit is the hardest to trust if it is rated or not. Because some brands of the PSU is not 80+ certified, or some say it is True Rated. The brand I suggest is Corsair, Seasonic, Coolermaster and FSP."</string>
    <string name="installssd">"   For SATA SSDs, connect one end of the SATA data cable to the SSD and the other end to an available SATA port on the motherboard. Attach the SSD to the drive bay using screws. In many cases, there are mounting holes for securing the SSD in place. All Storages are Compatible."</string>
    <string name="installssd2">"   For NVMe SSDs (M.2 SSDs), gently insert the NVMe SSD into the M.2 slot at a slight angle (about 30–45 degrees) and then press it down until it's seated firmly. It will fasten in place with a screw. Once the NVMe SSD is securely installed, close the case and secure it with screws."</string>
    <string name="installgpu">"   Align the graphics card with the PCIe slot. Carefully insert it into the slot. Make sure it's properly seated and that the PCIe connector at the bottom of the card fits securely into the slot. You may need to gently press down until it clicks into place. Attach the graphics card to the case using screws. The case should have corresponding holes and mounting points. Tighten the screws to secure the card in place. Be careful not to overtighten."</string>
    <string name="installgpu2">"   Ensure that the graphics card is recognized and working correctly. You can do this by checking your system information or running a graphics-intensive application or game. And congratulations, you built up your first system unit! Keep Calm and Enjoy to play the game!"</string>
    <string name="heading_one">Welcome to PCHub\nfor Dummies</string>
    <string name="heading_two">Easy access in your pocket</string>
    <string name="heading_three">Assembly Guides and Recommendations Computer Parts</string>
    <string name="heading_fourth">Let\'s get started!</string>
    <string name="desc_one">App that can show pc assembly guide and  recommended pc parts which you can buy on our app!</string>
    <string name="desc_two">Convenient app that can fit in your pocket!</string>
    <string name="desc_three">Guides and Recommendation that you can check out</string>
    <string name="desc_fourth">Login or Create your own account to get started!</string>
    <string name="recommendation">" Here is where we will give you guidance in choosing parts for your PC build and give you some of out recommendation parts and why do we recommend them.</string>
    <string name="cpu">Should you pick AMD or Intel?</string>
    <string name="motherboard">What type of motherboard should you pick?</string>
    <string name="graphics">What to know about graphics cards and should you buy one?</string>
    <string name="psu">Pick the correct Power Supply Unit.</string>
    <string name="ssd">Type of SSD and which one should you buy?</string>
    <string name="ram">How many capacity and Hz of RAM should you pick?</string>
    <string name="pc_case">What casing and what size suites your taste?</string>
    <string name="cpu_description1">"   AMD vs Intel. One of the most controversial battles between manufacturers of CPU."</string>
    <string name="cpu_description2">"   But which manufacturer offers better quality, performance, features and price? Let this guide break it down for you."</string>
    <string name="cpu_description3">"   To make things short and simple, both manufacturer's products may vary depending on their offered features and what suits your preference."</string>
    <string name="cpu_description4">"   To see their difference, if you are building a PC where you can play light games on it or doing heavy multitasking workloads, and consumes less power, then AMD is the choice for you. Which is why majority of consumers use AMD because it is cheaper and meets the consumer's common level of standards."</string>
    <string name="cpu_description5">"   And if you are looking for a CPU for your PC build where you can play and run high-frequency games and video applications. Intel would be a better choice for you because they have more cores and faster memory access speeds than their AMD counterparts. "</string>
    <string name="motherboard_description1">"    AMD and Intel have different Motherboards. So better know the difference of the looks of their motherboards"</string>
    <string name="motherboard_description2">"    If your cpu is AMD, We would recommend the B450. It is one of the budget motherboards of AMD."</string>
    <string name="motherboard_description3">"    If your cpu is Intel, We would recommend the B460. It is one of the budget motherboards of Intel."</string>
    <string name="motherboard_description4">"    When comparing Intel and AMD motherboards, it's important to consider several factors to determine which one is right for your needs. Both Intel and AMD have their own CPU architectures, and motherboards are designed to be compatible with their respective processors."</string>
    <string name="ram_description1">"    Choosing the right RAM (Random Access Memory) for your computer is an essential part of building or upgrading a system. RAM affects your computer's overall performance and multitasking capabilities."</string>
    <string name="ram_description2">"    The more hz, the more better. Higher frequency is better for RAM because of your performance while multitasking."</string>
    <string name="ram_description3">"    RAM also has DDR3, DDR4 and DDR5 slots. DDR3 is for the older version of the motherboard. DDR4 is for budget motherboards. And DDR5 is for the latest variant motherboards."</string>
    <string name="ram_description4">"    Choosing the right RAM involves understanding your system's requirements, considering RAM type, capacity, speed, latency, brand, and aesthetics, as well as assessing any future expansion needs. Always verify compatibility with your motherboard and CPU before purchasing RAM, and consider your usage scenario to ensure you get the performance you need."</string>
</resources>