<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_theme"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start"
                android:clickable="true"
                android:contentDescription="Back"
                android:onClick="onBackPressed"
                android:src="@drawable/baseline_arrow_back_ios_new_24" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="How to choose RAM or Memory."
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/ram_description1"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </View>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="215sp"
                android:src="@drawable/ddr3"/>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/ram_description2"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </View>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="215sp"
                android:src="@drawable/ddr4" />

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/ram_description3"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </View>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="215sp"
                android:src="@drawable/ddr5" />

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/ram_description4"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </View>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </View>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/cyan">

        </View>

    </LinearLayout>

</ScrollView>